Documentacao swagger da categoria ok
