# back-end/src/routes/CategoryRouter.js
@@ -9,9 +9,9 @@ const router = express.Router();
 
 router.get("/", listAllCategory);
 
-router.post("/", fieldValidCategory, categoryExists, createCategory);
+router.post("/create", fieldValidCategory, categoryExists, createCategory);
 
-router.delete("/:id", deleteCategory);
+router.delete("/delete/:id", deleteCategory);
 
 router.use((err, _req, res, _next) => {
     res.status(status.INTERNAL_SERVER_ERROR).send( { error: `Error! ${err.message}` });
